feat: Get user data api methods
